tests/ui/type-alias-impl-trait/constrain_inputs.stderr
error[E0581]: return type references an anonymous lifetime, which is not constrained by the fn input types
  --> $DIR/constrain_inputs.rs:9:31
   |
LL |     fn execute(ty: Ty<'_>) -> &str { todo!() }
   |                               ^^^^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error[E0581]: return type references an anonymous lifetime, which is not constrained by the fn input types
  --> $DIR/constrain_inputs.rs:13:35
   |
LL |     type BadFnSig = fn(Ty<'_>) -> &str;
   |                                   ^^^^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error[E0582]: binding for associated type `Output` references an anonymous lifetime, which does not appear in the trait input types
  --> $DIR/constrain_inputs.rs:15:42
   |
LL |     type BadTraitRef = dyn Fn(Ty<'_>) -> &str;
   |                                          ^^^^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error[E0581]: return type references an anonymous lifetime, which is not constrained by the fn input types
  --> $DIR/constrain_inputs.rs:24:31
   |
LL |     fn execute(ty: Ty<'_>) -> &str { ty() }
   |                               ^^^^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error[E0581]: return type references an anonymous lifetime, which is not constrained by the fn input types
  --> $DIR/constrain_inputs.rs:35:37
   |
LL |     type BadFnSig = fn(Ty<&str>) -> &str;
   |                                     ^^^^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error[E0582]: binding for associated type `Output` references an anonymous lifetime, which does not appear in the trait input types
  --> $DIR/constrain_inputs.rs:37:44
   |
LL |     type BadTraitRef = dyn Fn(Ty<&str>) -> &str;
   |                                            ^^^^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error: item does not constrain `lifetime_params::Ty::{opaque#0}`
  --> $DIR/constrain_inputs.rs:9:8
   |
LL |     fn execute(ty: Ty<'_>) -> &str { todo!() }
   |        ^^^^^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/constrain_inputs.rs:5:19
   |
LL |     type Ty<'a> = impl Sized;
   |                   ^^^^^^^^^^

error: item does not constrain `lifetime_params_2::Ty::{opaque#0}`
  --> $DIR/constrain_inputs.rs:24:8
   |
LL |     fn execute(ty: Ty<'_>) -> &str { ty() }
   |        ^^^^^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/constrain_inputs.rs:20:19
   |
LL |     type Ty<'a> = impl FnOnce() -> &'a str;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0581, E0582.
For more information about an error, try `rustc --explain E0581`.
